k8s-new/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stadium-delivery
  labels:
    name: stadium-delivery
