k8s-new/05-kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: stadium-delivery
spec:
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: bitnami/zookeeper:latest
          ports:
            - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: stadium-delivery
spec:
  ports:
    - port: 2181
      targetPort: 2181
  selector:
    app: zookeeper
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: stadium-delivery
spec:
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka:3.4.0
          ports:
            - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: stadium-delivery
spec:
  ports:
    - port: 9092
      targetPort: 9092
      name: client
    - port: 9093
      targetPort: 9093
      name: controller
  selector:
    app: kafka
