k8s-new/06-inventory-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: stadium-delivery
spec:
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      containers:
        - name: inventory-service
          image: stadium-delivery/inventory-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: stadium-delivery
spec:
  type: NodePort
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30090
  selector:
    app: inventory-service
