k8s-new/07-order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: stadium-delivery
spec:
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: stadium-delivery/order-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: stadium-delivery
spec:
  type: NodePort
  ports:
    - port: 8082
      targetPort: 8082
      nodePort: 30091
  selector:
    app: order-service
