k8s-new/08-notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: stadium-delivery
spec:
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: stadium-delivery/notification-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: stadium-delivery
spec:
  type: NodePort
  ports:
    - port: 8083
      targetPort: 8083
      nodePort: 30092
  selector:
    app: notification-service
